--- a/Wba.Oefening.Games.Web/Wba.Oefening.Games.Web.csproj
+++ b/Wba.Oefening.Games.Web/Wba.Oefening.Games.Web.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Wba.Oefening.Games.Core\Wba.Oefening.Games.Core.csproj" />
+  </ItemGroup>
+
 </Project>
